--- a/SkilEx/Base.lproj/LaunchScreen.storyboard
+++ b/SkilEx/Base.lproj/LaunchScreen.storyboard
@@ -33,7 +33,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.42352941176470588" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.074509803920000006" green="0.35294117650000001" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="896" id="Efa-Ri-0rl"/>
                                     <constraint firstAttribute="width" constant="414" id="oZ3-9k-ktY"/>
