--- a/SkilEx/MainViewControllers/MainView.storyboard
+++ b/SkilEx/MainViewControllers/MainView.storyboard
@@ -1689,6 +1689,7 @@
                         <outlet property="viewTwo" destination="1T3-aB-SPO" id="jbx-iu-OHF"/>
                         <outlet property="viewTwoImgView" destination="Gvi-CB-qYJ" id="aRc-le-ztt"/>
                         <segue destination="zGb-Jc-R4T" kind="show" identifier="ongoingService" id="KS9-pG-Kaa"/>
+                        <segue destination="bzD-Kd-OiO" kind="show" identifier="requestedService" id="O25-L2-qFh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iam-sH-J5o" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1702,6 +1703,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfp-oJ-Iqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="958" y="1240"/>
+        </scene>
+        <!--requestedService-->
+        <scene sceneID="FtF-FR-EjT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CustomerService" referencedIdentifier="requestedService" id="bzD-Kd-OiO" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vSl-RL-rUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="958" y="1319"/>
         </scene>
         <!--Search Result-->
         <scene sceneID="gx9-8a-h1q">
